search integer